styles/board.css
dialog[open] {
    display: flex;
}

.dialog {
    margin: 0;
    width: 100%;
    height: 100vh;
    color: #000000;
    background-color: rgba(0, 0, 0, 0.1);
    border: unset;
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

.content {
    width: calc(100% - 232px);
    height: calc(100vh - 96px);
    position: absolute;
    top: 96px;
    left: 232px;
    overflow-y: auto;
}

.p-relative {
    position: relative;
}

.board-top-group {
    box-sizing: border-box;
    padding: 79.5px 64px 48px 64px;
    max-width: 1208px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    gap: 16px 107px;
}

.board-headline {
    margin: 0;
    height: 73px;
    font-family: "Inter", sans-serif;
    font-size: 61px;
    font-weight: 700;
    line-height: 73.2px;
}

.board-top-right {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: center;
    gap: 16px 32px;
}

.board-search {
    box-sizing: border-box;
    padding: 11px 16px;
    width: 312px;
    font-family: "Inter", sans-serif;
    font-size: 20px;
    font-weight: 400;
    line-height: 24px;
    border: 1px solid #a8a8a8;
    border-radius: 10px;
    outline: none;
}

.board-search-img {
    padding-left: 15px;
    width: 32px;
    height: 32px;
    object-fit: cover;
    object-position: center;
    border-left: 1px solid #d1d1d1;
    position: absolute;
    top: 8px;
    right: 17px;
    cursor: pointer;
}

.board-task-button {
    padding: 8px 16px;
    background-color: #2a3647;
    border: unset;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    cursor: pointer;
}

.board-task-button:hover {
    background-color: #2FBAF5;
}

.btb-text {
    width: 92px;
    height: 24px;
    font-family: "Inter", sans-serif;
    font-size: 21px;
    font-weight: 700;
    line-height: 25.2px;
    color: #ffffff;
}

.btb-img {
    width: 32px;
    height: 32px;
    object-fit: cover;
    object-position: center;
}

.board-search-mobile {
    box-sizing: border-box;
    padding: 40px 16px 0 16px;
    width: 100%;
    display: none;
    justify-content: center;
    align-items: center;
}

.board-header-group {
    padding: 0 64px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 26px;
}

.board-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.board-header-title {
    font-family: "Inter", sans-serif;
    font-size: 20px;
    font-weight: 700;
    line-height: 24px;
    color: #42526e;
}

.board-header-img {
    width: 24px;
    height: 24px;
    object-fit: cover;
    object-position: center;
}

.board-content-group {
    padding: 0 47px 48px 64px;
    min-height: 566px;
    max-width: 1208px;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 24px;
}

.board-content {
    width: 252px;
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.board-body {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 16px;
    min-height: 200px;
}

.board-no-task {
    box-sizing: border-box;
    width: 100%;
    height: 48px;
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 19.2px;
    color: #a8a8a8;
    background-color: #e7e7e7;
    border: 1px dotted #a8a8a8;
    border-radius: 10px;
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.16);
    display: flex;
    justify-content: center;
    align-items: center;
}

.board-task-card {
    box-sizing: border-box;
    padding: 16px;
    width: 100%;
    background-color: #ffffff;
    border-radius: 24px;
    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.08);
    display: flex;
    flex-direction: column;
    gap: 24px;
    cursor: pointer;
    transition: all 0.124s ease-in-out;
}

.board-task-card:hover {
    transform: scale(1.03);
}

.btc-type {
    box-sizing: border-box;
    margin: 0;
    padding: 4px 16px;
    width: fit-content;
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 19.2px;
    color: #ffffff;
    border-radius: 8px;
}

.btc-type-blue {
    background-color: #0038ff;
}

.btc-type-green {
    background-color: #1fd7c1;
}

.btc-group {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.btc-title {
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-weight: 700;
    line-height: 19.2px;
    color: #2a3647;
}

.btc-description {
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 19.2px;
    color: #a8a8a8;
    text-overflow: ellipsis;
    overflow: hidden;
    max-height: 3lh;
}

.board-task-progress-group {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.board-task-max-bar {
    width: 128px;
    background-color: #f4f4f4;
    border-radius: 8px;
}

.board-task-value-bar {
    width: 0%;
    height: 8px;
    background-color: #4589ff;
    border-radius: 16px;
}

.board-task-progress-text {
    height: 14px;
    font-family: "Inter", sans-serif;
    font-size: 12px;
    font-weight: 400;
    line-height: 14.4px;
}

.user-priority-group {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.board-user-group {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.board-card-user {
    box-sizing: border-box;
    width: 32px;
    height: 32px;
    font-family: "Inter", sans-serif;
    font-size: 12px;
    font-weight: 400;
    line-height: 14.4px;
    color: #ffffff;
    border: 1px solid #ffffff;
    border-radius: 45px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.bcu-orange {
    background-color: #ff7a00;
}

.bcu-green {
    margin-left: -8px;
    background-color: #1fd7c1;
}

.bcu-dark-blue {
    margin-left: -8px;
    background-color: #462f8a;
}

.bcu-magenta {
    background-color: #fc71ff;
}

.bcu-blue {
    margin-left: -8px;
    background-color: #6e52ff;
}

.bcu-purple {
    margin-left: -8px;
    background-color: #9327ff;
}

.bcu-yellow {
    background-color: #ffbb2b;
}

.bcu-red {
    margin-left: -8px;
    background-color: #ff4646;
}

.board-task-value-bar-complete {
    width: 100%;
    height: 8px;
    background-color: #4589ff;
    border-radius: 16px;
}

.bcu-blue-green {
    background-color: #00bee8;
}

.highlight-placeholder {
    width: 100%;
    height: 100vh;
    opacity: 0.7;
    pointer-events: none;
}


@media (max-width: 870px) {
    .board-content {
        flex-direction: column;
        width: 100%;
    }
    .board-body {
        flex-direction: row;
    }
}
@media (max-width: 830px){
    .horizontal-scroll {
        overflow-y: hidden;
        overflow-x: auto; 
        white-space: nowrap;
        touch-action: none; 
    }
}

